# samaarthyasetu

./: CNAME  Dockerfile  Makefile  README.md  docker-compose.yml  inference.py  openenv.yaml  preview.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DEMO_SCRIPT.md  JUDGE_QA.md  REWARD_DESIGN.md  SUBMISSION_CHECKLIST.md
ml/: model.py
samaarthya_ops_env/: __init__.py  environment.py  matching_engine.py  models.py  reward_shaping.py
samaarthya_ops_env/data/: __init__.py  seed_data.py
samaarthya_ops_env/graders/: __init__.py  task_graders.py
samaarthya_ops_env/tasks/: __init__.py  task_definitions.py
server/: app.py
tests/: conftest.py  test_environment.py  test_graders_and_api.py  test_inference_modes.py  test_reward_shaping.py  test_tasks.py
