[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "samaarthyasetu"
version = "1.0.0"
description = "SamaarthyaSetu — Inclusive Employment OS for Persons with Disabilities (OpenEnv)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.57.0",
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.6.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["samaarthya_ops_env*", "server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
